fix home z-index

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -21,7 +21,7 @@ section#section-parts {
 	}
 	> .container {
 		position: relative;
-		z-index: 1;
+		z-index: 2;
 	}
 }
 
@@ -44,7 +44,6 @@ section#section-guideline {
 			width: 100%;
 			height: 1px;
 			border-bottom: 1px solid;
-			z-index: 0;
 			@media #{$xs} {
 				bottom: -30px;
 			}
@@ -84,34 +83,12 @@ section#section-guideline {
 			a {
 				display: inline-block;
 				width: 100%;
-				height: 100%;
 				font-style: italic;
 				//ojo
 				position: relative;
 				&.disabled {
 					opacity: 0.5;
 					cursor: not-allowed;
-				}
-				&:not(.disabled) {
-					/*&:before {
-						position: fixed;
-						width: 0;
-						height: 0;
-						top: 0;
-						right: 0;
-						background-color: rgba(0,0,0,0.4);
-						content: "";
-						z-index: -1;
-						opacity: 0;
-					}*/
-					&:hover, &:active, &:focus {
-						z-index: 10;
-						/*&:before {
-							opacity: 1;
-							width: 100%;
-							height: 100%;
-						}*/
-					}
 				}
 				.badge {
 					border-radius: 50%;
@@ -140,6 +117,12 @@ section#section-guideline {
 			}
 			.popover {
 				font-family: 'Exo 2', sans-serif;
+				z-index: 100;
+				ul, ol {
+					list-style: none;
+					margin-bottom: 0;
+					padding-left: 0;
+				}
 			}
 			@media #{$xs} {
 				display: table-row;
@@ -164,7 +147,7 @@ section#section-guideline {
 				
 			}
 			&:first-child {
-				width: 3%;
+				width: 2.5%;
 				text-align: right;
 				padding: 0;
 				padding-right: 5px;
