--- a/app/assets/stylesheets/helpers.scss
+++ b/app/assets/stylesheets/helpers.scss
@@ -57,6 +57,7 @@ $xxxs: '(max-width: 320px)';
 // Triangle
 .half-triangle {
 	position: absolute;
+	z-index: auto;
 	content: '';
 	width: 0;
 	height: 0;
